@@ -1,15 +1,7 @@
-.\" Automatically generated by Pod::Man 2.16 (Pod::Simple 3.05)
+.\" Automatically generated by Pod::Man 2.25 (Pod::Simple 3.16)
 .\"
 .\" Standard preamble:
 .\" ========================================================================
-.de Sh \" Subsection heading
-.br
-.if t .Sp
-.ne 5
-.PP
-\fB\\$1\fR
-.PP
-..
 .de Sp \" Vertical space (when we can't use .PP)
 .if t .sp .5v
 .if n .sp
@@ -53,7 +45,7 @@
 .el       .ds Aq '
 .\"
 .\" If the F register is turned on, we'll generate index entries on stderr for
-.\" titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and index
+.\" titles (.TH), headers (.SH), subsections (.SS), items (.Ip), and index
 .\" entries marked with X<> in POD.  Of course, you'll have to process the
 .\" output yourself in some meaningful fashion.
 .ie \nF \{\
@@ -131,8 +123,8 @@
 .rm #[ #] #H #V #F C
 .\" ========================================================================
 .\"
-.IX Title "RSNAPSHOT-PROGRAM 1"
-.TH RSNAPSHOT-PROGRAM 1 "2010-03-17" "perl v5.10.0" "User Contributed Perl Documentation"
+.IX Title "rsnapshot 1"
+.TH rsnapshot 1 "2013-09-18" "" ""
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -443,6 +435,16 @@ This gets passed directly to rsync using the \-\-include\-from directive. See th
 .RS 4
 This gets passed directly to rsync using the \-\-exclude\-from directive. See the
 \&\fIrsync\fR\|(1) man page for the syntax.
+.RE
+.RE
+.RS 4
+.Sp
+\&\fBfilter_file         /path/to/filter/file\fR
+.Sp
+.RS 4
+The filename specified with this option is passed to rsync using 
+\&\-\-filter=\*(L"merge /path/to/filter/file\*(R". See the \fIrsync\fR\|(1) man page for the
+syntax.
 .RE
 .RE
 .RS 4
