@@ -27,6 +27,7 @@ VERSION 1.3.x
   http://sourceforge.net/mailarchive/forum.php?thread_name=4986E5A4.3090002%40Media-Brokers.com&forum_name=rsnapshot-discuss
 - rsnapshot-diff: Add -s option to show size of each file.
   http://sourceforge.net/mailarchive/forum.php?thread_name=20080128082704.03568f0c%40szpak&forum_name=rsnapshot-discuss
+- Add filter_file option
 
 VERSION 1.3.1  (Aug 31 2008)
 ------------------------------------------------------------------------------
